compiler/test/conformance/testdata/errors/23_annotation_undefined.yz
`foo: bar`
Server: {}

main: {
    print("ok")
}
